# Server

./: CMakeLists.txt  RFC 2730 Main Ideas.txt  local_server.cpp  test
Project_Notes/: project_plan.txt  recommend_stuff.txt
Project_Notes/Website_ideas_notes/: RFC 2730 Main Ideas.txt
Testing/: testing_newshit.cpp
includes/Headers/: http_request.hpp
includes/Sourcefiles/: http_request  http_request.cpp  local_server  local_server.cpp  test  test.cpp
website/: index.html
website/Index/: index.html
website/css/: portfolio.css
website/js/: portfolio.js
website/jsons/: mime.json
website/pages/: index.html  learning.html  projects.html
website/status_codes/: status_codes.json
